resources/testcases_static_checks/tests/positive/isDmfc/r15.rls
../../../tests_common_data/from-evaluation-section/r15.rls