resources/testcases_static_checks/tests/negative/isDrmfc/r08.rls
../../../tests_common_data/from-evaluation-section/r08.rls